# hydra

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: integration.yml
data/stack/: image.hdr  memorial.hdr_image_list.txt
examples/: bilateral_filter.py  get_started.py  inv_tmo.py  ldr_to_hdr.py  load_and_save.py  tone_mapping.py
hydra/: __init__.py
hydra/core/: __init__.py  gsolve.py  pixel.py  utils.py
hydra/eo/: __init__.py  akyuz.py  kuo.py
hydra/filter/: bilateral.py
hydra/filters/: __init__.py  bilateral.py
hydra/io/: __init__.py  hdr_format.py  load.py  pfm_format.py  save.py
hydra/tonemap/: __init__.py  drago.py  drago03.py  durand.py  exponential.py  fattal.py  fattal02.py  gamma.py  lischinski.py  lischinski06.py  logarithmic.py  normalize.py  reinhard.py  reinhard02.py  tumblin.py  tumblin93.py
tests/: .travis.yml  test_core.py  test_helper.py  test_io.py
